--- a/test_spring/src/main/resources/application.properties
+++ b/test_spring/src/main/resources/application.properties
@@ -5,6 +5,7 @@ server.port=7777
 spring.thymeleaf.cache=false
 server.servlet.session.timeout=30m
 server.servlet.session.cookie.secure=false
+spring.jpa.hibernate.ddl-auto=none
 
 
 #spring.mvc.static-path-pattern=/static/**
