--- a/test_spring/src/main/resources/application.properties
+++ b/test_spring/src/main/resources/application.properties
@@ -5,14 +5,14 @@ server.port=7777
 spring.thymeleaf.cache=false
 server.servlet.session.timeout=30m
 server.servlet.session.cookie.secure=false
-spring.jpa.hibernate.ddl-auto=none
 
 
 #spring.mvc.static-path-pattern=/static/**
 #spring.web.resources.static-locations=classpath:/static/,classpath:/public/
 
 # MySQLの接続設定
-spring.datasource.url=jdbc:mysql://localhost:3306/test_cytech?useSSL=false&serverTimezone=Asia/Tokyo
+spring.datasource.url=jdbc:mysql://localhost:3306/test_cytech?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Tokyo
+
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
